adapt to mobile devices

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 <section class="about-us-block">
                     <!-- <h1>About Us</h1> -->
                     <div class="about-us-content">
+                        <img src="assets/ByeBuyExample.png" alt="ByeBuy App Example" class="about-us-app-example">
                         <div>
                             <h1>About Us</h1>
                             <p>Tired of forgetting about subscriptions and unexpected charges? Subscription Tracker helps you manage, track, and cancel subscriptions effortlessly. Stay in control of your recurring payments for streaming, software, fitness, and more!</p>
-                            <a href="index.html" class="download-button"><img src="assets/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" alt="Download on the AppStore"></a>
+                            <a href="https://apps.apple.com/app/id6741595438" class="download-button"><img src="assets/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" alt="Download on the AppStore"></a>
                         </div>
-                        <img src="assets/ByeBuyExample.png" alt="ByeBuy App Example" class="about-us-app-example">
                     </div>
                 </section>
             </main>
